# pm-scalper-dashboard

./: README.md  main.py  pyproject.toml  railway.yaml
.github/workflows/: deploy.yml
static/: app.js  style.css
templates/: index.html
